<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">yt2mp3</string>
    <string name="convert">Convert to MP3</string>
    <string name="cancel">Cancel</string>
    <string name="paste">Paste</string>
    <string name="open_downloads">Open downloads</string>
    <string name="update_engine">Update engine</string>
    <string name="skin_light">☀</string>
    <string name="skin_dark">☾</string>
    <string name="skin_light_description">Bright skin</string>
    <string name="skin_dark_description">Dark skin</string>
    <string name="info">About</string>
    <string name="info_title">About yt2mp3</string>
    <string name="info_message">Developer name: Andrei Efremuahkin
Email: andrei.efr@gmail.com
Github repo URL: https://github.com/efremandrei/yt2mp3
Version/build: %1$s/%2$d</string>
</resources>
